style: smooth scrolling targets

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  scroll-behavior: smooth;
+}
+:target {
+  scroll-margin-top: 5rem;
+}
+
+@media only screen and (min-width: 768px) {
+  :target {
+    scroll-margin-top: 6rem;
+  }
+}
